--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @Suni29:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=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
+always-auth=true
